# raytracer

./: README.md  tree.txt
code/: CMakeLists.txt  run_all.sh
code/include/: aabb.hpp  camera.hpp  curve.hpp  image.hpp  mesh.hpp  perlin.hpp  sphere.hpp  triangle.hpp  utils.hpp
code/output/: space.ppm
code/src/: main.cpp  mesh.cpp
code/testcases/: minecraft.txt  space.txt
include/: box.hpp  bvh.hpp  group.hpp  hit.hpp  light.hpp  material.hpp  object3d.hpp  plane.hpp  ray.hpp  rectangle.hpp  revsurface.hpp  sceneGenerator.hpp  scene_parser.hpp  texture.hpp  transform.hpp
output/: empty.ppm
output/temp/ppm/: 0empty.ppm  10empty.ppm  10space.ppm  20empty.ppm  20space.ppm  30space.ppm  40space.ppm  50space.ppm  60space.ppm  70space.ppm  80space.ppm  90space.ppm
src/: bvh.cpp  image.cpp  scene_parser.cpp  texture.cpp
testcases/: empty.txt  waterdrop.txt
